[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tracemem"
version = "0.4.0"
authors = [
        { name = "Nyggus", email = "nyggus@gmail.com" },
]
description = "A lightweight tool to measure and trace the full memory of a Python session"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["psutil"]
classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/nyggus/tracemem/"

[tool.setuptools]
packages = ["tracemem"]

[project.optional-dependencies]
dev = ["wheel", "black", "pytest", "mypy", "setuptools", "build"]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests", "tracemem"]
addopts = '--doctest-modules --doctest-glob="*.md"'
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL"
]